--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@
 body {
 	background: #f1fbff;
 }
+#preloader{
+    background: #fff url(img/loader.gif) no-repeat center center;
+    background-size: 400px;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
 .navbar-nav {
 	margin-left: 50px;
    }
